--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "util-components",
-  "version": "1.0.1",
-  "main": "index.js",
+  "version": "1.0.2",
+  "main": "dist/index.js",
   "author": "Matthew Hamlin <hamlim@outlook.com> (https://matthamlin.me/)",
   "license": "MIT",
   "devDependencies": {
