--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "util-components",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "author": "Matthew Hamlin <hamlim@outlook.com> (https://matthamlin.me/)",
   "license": "MIT",
   "devDependencies": {
