--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "util-components",
   "version": "1.0.9",
   "main": "dist/index.js",
-  "files": [
-    "dist"
-  ],
-  "author": "Matthew Hamlin <hamlim@outlook.com> (https://matthamlin.me/)",
+  "files": ["dist"],
+  "author":
+    "Matthew Hamlin <hamlim@outlook.com> (https://matthamlin.me/)",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.44",
     "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-class-properties":
+      "^7.0.0-beta.44",
+    "@babel/plugin-proposal-export-default-from":
+      "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.44",
     "babel-core": "^7.0.0-bridge.0",
@@ -26,25 +27,19 @@
     "react": "16.3.2"
   },
   "scripts": {
-    "prepublish": "babel src --out-dir dist --ignore test.js",
+    "prepublish":
+      "babel src --out-dir dist --ignore test.js",
     "test": "jest"
   },
   "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
     "plugins": [
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-proposal-export-default-from"
     ],
-    "ignore": [
-      "test.js"
-    ]
+    "ignore": ["test.js"]
   },
   "jest": {
-    "modulePathIgnorePatterns": [
-      "<rootDir>/dist/"
-    ]
+    "modulePathIgnorePatterns": ["<rootDir>/dist/"]
   }
 }
